force-app/main/default/objects/Account/fields/Apex_Record_Creation_History_Status__c.field-meta.xml
<CustomField>
    <fullName>Apex_Record_Creation_History_Status__c</fullName>
    <description>Shows the status of creating a Record Creation History for an Account using Queueable Apex. Pending means that it should be running and complete soon.</description>
    <inlineHelpText>Shows the status of creating a Record Creation History for an Account using Queueable Apex. Pending means that it should be running and complete soon.</inlineHelpText>
    <label>Apex Record Creation History Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Async_Status</valueSetName>
    </valueSet>
</CustomField>