force-app/main/default/objects/Account/fields/Apex_UUID_Status__c.field-meta.xml
<CustomField>
    <fullName>Apex_UUID_Status__c</fullName>
    <description>Shows the status of setting Account.AccountNumber to a UUID using Queueable Apex. Pending means that it should be running and complete soon.</description>
    <inlineHelpText>Shows the status of setting Account.AccountNumber to a UUID using Queueable Apex. Pending means that it should be running and complete soon.</inlineHelpText>
    <label>Apex UUID Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Async_Status</valueSetName>
    </valueSet>
</CustomField>