force-app/main/default/objects/Account/fields/Automation_Type__c.field-meta.xml
<CustomField>
    <fullName>Automation_Type__c</fullName>
    <label>Automation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Automation_Type</valueSetName>
    </valueSet>
</CustomField>